--- a/tests/catapult/crypto_voting/CMakeLists.txt
+++ b/tests/catapult/crypto_voting/CMakeLists.txt
@@ -1,3 +1,4 @@
 cmake_minimum_required(VERSION 3.14)
 
 catapult_test_executable_target(tests.catapult.crypto_voting core test)
+target_link_libraries(tests.catapult.crypto_voting tests.catapult.test.crypto)
