--- a/tools/testvectors/CMakeLists.txt
+++ b/tools/testvectors/CMakeLists.txt
@@ -1,3 +1,4 @@
 cmake_minimum_required(VERSION 3.14)
 
 catapult_define_tool(testvectors)
+target_link_libraries(catapult.tools.testvectors catapult.crypto_voting)
