GeneratePrivateKey and implement ExtractPublicKeyFromPrivateKey, fix VotingKeyPairTests

--- a/src/catapult/crypto_voting/CMakeLists.txt
+++ b/src/catapult/crypto_voting/CMakeLists.txt
@@ -1,4 +1,6 @@
 cmake_minimum_required(VERSION 3.14)
 
+find_package(AMCL REQUIRED)
+
 catapult_library_target(catapult.crypto_voting)
-target_link_libraries(catapult.crypto_voting catapult.crypto)
+target_link_libraries(catapult.crypto_voting catapult.crypto AMCL::AMCL)
